[DANIL] активация пользователя сделана

--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -22,7 +22,7 @@
                   <li><a routerLink="/tablehistoryreviews">TableHistoryReviews</a></li>
                   <li><a routerLink="/transactions">Transactions</a></li>
                   <li><a routerLink="/partners">Partners</a></li>
-                  <li><a routerLink="/settings">Settings</a></li>
+                  <li><a routerLink="/user/settings">Settings</a></li>
                   <li><a routerLink="/prepaid-card">Prepaid-card</a></li>
                   <li><a routerLink="/discount">Discount</a></li>
                 </ul>
