--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -235,6 +235,9 @@ img
 	color: $colorAccentOne
 .redColor
 	color: $errorColor
+.greenColor
+  color:  $green
+
 
 table tr td, table tr th
 	&[align=left], th[align=left]
