[DANIL] translate header and footer

--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -4,27 +4,27 @@
         <div class="footer__content">
           <div class="item">
             <ul class="nav-menu">
-              <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-              <li><a routerLink="/testimonials" routerLinkActive="active">Testimonials</a></li>
-              <li><a routerLink="/contacts" routerLinkActive="active">Contact</a></li>
+              <li><a routerLink="/home" routerLinkActive="active">{{ 'header.home' | translate }}</a></li>
+              <li><a routerLink="/testimonials" routerLinkActive="active">{{ 'header.testimonials' | translate }}</a></li>
+              <li><a routerLink="/contacts" routerLinkActive="active">{{ 'header.contacts' | translate }}</a></li>
               <li class="dropdown dropdown-up">
-                <a href="#" class="dropdown-link js-dropdown-link">More</a>
+                <a href="#" class="dropdown-link js-dropdown-link">{{ 'header.dropdown-link' | translate }}</a>
                 <ul class="dropdown-data">
-                  <li><a routerLink="#">Terms and conditions</a></li>
-                  <li><a routerLink="#">AML privacy</a></li>
-                  <li><a routerLink="#">Privacy policy</a></li>
-                  <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
-                  <li><a routerLink="/faq">FAQ</a></li>
-                  <li><a routerLink="/news">NEWS</a></li>
+                  <li><a href="#">{{ 'header.dropdown-data1' | translate }}</a></li>
+                  <li><a href="#">{{ 'header.dropdown-data2' | translate }}</a></li>
+                  <li><a href="#">{{ 'header.dropdown-data3' | translate }}</a></li>
+                  <li><a routerLink="/feesdiscount">{{ 'feesdiscount' | translate }}</a></li>
+                  <li><a routerLink="/faq">{{ 'header.faq' | translate }}</a></li>
+                  <li><a routerLink="/news">{{ 'header.news' | translate }}</a></li>
                   <li></li>
-                  <li><a routerLink="/landingmagazine">Landing Magazine</a></li>
-                  <li><a routerLink="/tablehistory">TableHistory</a></li>
-                  <li><a routerLink="/tablehistoryreviews">TableHistoryReviews</a></li>
-                  <li><a routerLink="/transactions">Transactions</a></li>
-                  <li><a routerLink="/partners">Partners</a></li>
-                  <li><a routerLink="/user/settings">Settings</a></li>
-                  <li><a routerLink="/prepaid-card">Prepaid-card</a></li>
-                  <li><a routerLink="/discount">Discount</a></li>
+                  <li><a routerLink="/landingmagazine">{{ 'header.landingmagazine' | translate }}</a></li>
+                  <li><a routerLink="/tablehistory">{{ 'header.tablehistory' | translate }}</a></li>
+                  <li><a routerLink="/tablehistoryreviews">{{ 'header.tablehistoryreviews' | translate }}</a></li>
+                  <li><a routerLink="/transactions">{{ 'header.transactions' | translate }}</a></li>
+                  <li><a routerLink="/partners">{{ 'header.partners' | translate }}</a></li>
+                  <li><a routerLink="/user/settings">{{ 'header.user-settings' | translate }}</a></li>
+                  <li><a routerLink="/prepaid-card">{{ 'header.prepaid-card' | translate }}</a></li>
+                  <li><a routerLink="/discount">{{ 'header.discount' | translate }}</a></li>
                 </ul>
               </li>
             </ul>
